--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "npm run dev:vite",
     "dev:vite": "electron-vite dev",
     "dev:backend": "./venv/bin/python agent/api/main.py",
-    "electron:dev": "concurrently -n backend,electron -c blue,green \"npm run dev:backend\" \"npm run dev:vite\"",
+    "electron:dev": "./scripts/cleanup.sh && concurrently -n backend,electron -c blue,green \"npm run dev:backend\" \"npm run dev:vite\"",
     "build": "electron-vite build",
     "preview": "electron-vite preview",
     "start": "electron .",
